--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -163,7 +163,7 @@
                 {{report.unloadingPoint || '---'}}
             </td>
             <td class="col-sm-2">
-                {{report.partyId || '---'}}
+                {{report.partyName || '---'}}
             </td>
         </tr>
     </table>
