added disabled in Trips sheets

--- a/client/views/partials/driverSheet/driver-sheet.html
+++ b/client/views/partials/driverSheet/driver-sheet.html
@@ -96,13 +96,13 @@
             <button class="btn btn-primary" ng-click="saveAll()"> Save</button>
         </div>
     </div>
-<div class="center-block" style="width: 60%;">
-    <div class="alert alert-danger" role="alert" ng-show="errors.length">
-        <ul>
-            <li ng-repeat="error in errors">{{error}}</li>
-        </ul>
-    </div>
-</div>
+<!--<div class="center-block" style="width: 60%;">-->
+    <!--<div class="alert alert-danger" role="alert" ng-show="errors.length">-->
+        <!--<ul>-->
+            <!--<li ng-repeat="error in errors">{{error}}</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</div>-->
 
     <table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-show="validateTable">
         <tr>
