--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -81,7 +81,7 @@
         </tr>
         <tr ng-repeat="sheet in tripSheets | filter:{registrationNo: tripSheets.registrationNo.registrationNo}"
             style="text-align: center;">
-            <td class="col-sm-1">{{$index+1}}{{sheet.loadingPoint}}</td>
+            <td class="col-sm-1">{{$index+1}}</td>
             <td class="col-sm-1">{{sheet.registrationNo | uppercase}}</td>
             <td class="col-sm-2">
                 <div class=" pos-relative">
