--- a/client/views/index.html
+++ b/client/views/index.html
@@ -168,8 +168,8 @@
                                         <div id="Transactions" class="panel-collapse collapse">
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="Trips" ui-sref="trips"></left-menu>
-                                                 <left-menu label="TripSheet" ui-sref="tripSheet"></left-menu>
-                                                  <left-menu label="DriverSheet" ui-sref="driverSheet"></left-menu>
+                                               <left-menu  ng-class="{hide:tripSheetEnabled === 'false'}" label="TripSheet" ui-sref="tripSheet"></left-menu>
+                                                <left-menu ng-class="{hide:driverSheetEnabled === 'false'}"  label="DriverSheet" ui-sref="driverSheet"></left-menu>
                                                  <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu label="Payments" ui-sref="payments"></left-menu>
                                             <left-menu label="LR" ui-sref="lrs"></left-menu>
